# bayyn

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_confidence_metrics.py  003_worker_reliability.py  004_progress_tracking.py  005_segment_editing.py  006_auth_fields.py  007_admin_role.py
backend/app/: config.py  database.py  logging_config.py  main.py  temp_manager.py
backend/app/auth/: dependencies.py  jwt_handler.py  password.py
backend/app/errors/: error_mapper.py
backend/app/exports/: docx_export.py  srt_export.py  txt_export.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  audit_log.py  temp_cleanup_log.py  transcript_document.py  (+3 more)
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_caption_processor.py  test_confidence.py  test_delete_privacy.py  test_error_handling.py  test_exports.py  test_health.py  test_integration.py  test_language_detector.py  test_llm_summary.py  test_long_video.py  test_metrics.py  test_observability.py  test_ownership.py  test_performance.py  test_production_config.py  test_progress_tracking.py  test_qa_assertions.py  test_rate_limiting.py  test_security.py  test_segment_editing.py  test_source_adapters.py  test_temp_compliance.py  test_text_cleaner.py  test_transcription_api.py  test_url_validator.py  test_whisper_processor.py  test_worker.py  test_worker_reliability.py
(+52 files in other folders)
