[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bayyn-backend"
version = "0.1.0"
description = "Bayyn - Privacy-first URL-to-transcript backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "celery==5.4.0",
    "redis==5.2.1",
    "httpx==0.28.1",
    "dnspython==2.7.0",
    "slowapi==0.1.9",
    "bleach==6.2.0",
    "yt-dlp==2024.12.13",
    "faster-whisper==1.1.0",
    "python-docx==1.1.2",
    "python-multipart==0.0.20",
    "python-dateutil==2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "factory-boy==3.3.1",
    "ruff==0.8.4",
    "black==24.10.0",
    "mypy==1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
